syntax = "proto3";

package planetmintgo.machine;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "planetmintgo/machine/params.proto";
import "planetmintgo/machine/machine.proto";
import "planetmintgo/machine/liquid_asset.proto";

option go_package = "github.com/planetmint/planetmint-go/x/machine/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/planetmint-go/machine/params";
  
  }
  
  // Queries a list of GetMachineByPublicKey items.
  rpc GetMachineByPublicKey (QueryGetMachineByPublicKeyRequest) returns (QueryGetMachineByPublicKeyResponse) {
    option (google.api.http).get = "/planetmint/planetmint-go/machine/get_machine_by_public_key/{publicKey}";
  
  }
  
  // Queries a list of GetTrustAnchorStatus items.
  rpc GetTrustAnchorStatus (QueryGetTrustAnchorStatusRequest) returns (QueryGetTrustAnchorStatusResponse) {
    option (google.api.http).get = "/planetmint/planetmint-go/machine/get_trust_anchor_status/{machineId}";
  
  }

  // Queries a list of GetMachineByAddress items.
  rpc GetMachineByAddress (QueryGetMachineByAddressRequest) returns (QueryGetMachineByAddressResponse) {
    option (google.api.http).get = "/planetmint/machine/address/{address}";
  
  }

  // Queries a list of GetLiquidAssetsByMachineid items.
  rpc GetLiquidAssetsByMachineId (QueryGetLiquidAssetsByMachineIdRequest) returns (QueryGetLiquidAssetsByMachineIdResponse) {
    option (google.api.http).get = "/planetmint/machine/liquid_assets/{machineId}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetMachineByPublicKeyRequest {
  string publicKey = 1;
}

message QueryGetMachineByPublicKeyResponse {
  Machine machine = 1;
}

message QueryGetTrustAnchorStatusRequest {
  string machineId   = 1;
}

message QueryGetTrustAnchorStatusResponse {
  string machineId = 1;
  bool   isActivated = 2;
}

message QueryGetMachineByAddressRequest {
  string address = 1;
}

message QueryGetMachineByAddressResponse {
  Machine machine = 1;
}

message QueryGetLiquidAssetsByMachineIdRequest {
  string machineId = 1;
}

message QueryGetLiquidAssetsByMachineIdResponse {
  LiquidAsset liquidAssetEntry = 1;
}